# posedetect

./: .gitignore  A_LINE_STRUCTURE.md  B_LINE_STRUCTURE.md  DEPLOY_README.md  README.md  debug_a_collapse.py  debug_windows.py  environment.yml  penn_pushup_jumpingjacks_manifest.csv  postprocess_label.py  preprocess_for_label.py  pyproject.toml  requirements.txt  标注说明.md
configs/: a_line.yaml  b_line.yaml  dataset.yaml  penn_a_line.yaml  penn_a_line_calibrated.yaml  penn_a_line_roi.yaml  penn_a_line_roi_cpu.yaml  penn_b_line.yaml  penn_opentad_manual.yaml
gt/: README.md  assignment_summary.json  lrx.csv  mapping_video_to_annotator.csv  syq.csv  szh.csv  人工标注说明.md
gt/ucf/: README.md  assignment_summary.json  lrx.csv  lrx_frame.csv  mapping_video_to_annotator.csv  syq.csv  syq_frame.csv  szh.csv  szh_frame.csv  人工标注说明.md
scripts/: align_pose_with_penn_roi.py  build_manual_refined_template.py  calibrate_pose_with_penn.py  download_kinetics_subset.py  evaluate_penn_pipeline.py  export_opentad_json.py  export_pseudo_timestamps.py  extract_pose.py  extract_pose_from_frames.py  filter_pseudo_annotations.py  infer_segments.py  infer_split_b_line.py  inspect_dataset.py  make_group_splits.py  make_splits.py  prepare_kinetics_subset.py  prepare_llsp_splits.py  prepare_penn_action.py  sample_manual_subset.py  split_gt_for_annotators.py  train_a_line.py  train_b_line.py  validate_manual_annotations.py  visualize_samples.py
src/a_line/: __init__.py  pipeline.py
src/b_line/: __init__.py  full_detector.py  minimal_detector.py
src/common/: __init__.py  output_schema.py
(+8 files in other folders)
